src/objects/DEVOPS_Setup_Request__c.object
<CustomObject>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Key_Point_of_Contact__c</fullName>
        <label>Key Point of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce.com</fullName>
                </value>
                <value>
                    <fullName>Hybris</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_Control_System_Identified__c</fullName>
        <label>Version Control System Identified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BitBucket</fullName>
                </value>
                <value>
                    <fullName>GitHub</fullName>
                </value>
                <value>
                    <fullName>SVN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Setup Request</label>
    <nameField>
        <displayFormat>DSR-{0000}</displayFormat>
        <label>DEVOPS Setup Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>